kernel/atomgit/使用 GCC 15 编译内核时 DRM 模块构建失败.txt
#标题
使用 GCC 15 编译内核时 DRM 模块构建失败

#内核版本
OLK-6.6

#问题现象
使用 GCC 15 编译内核时，编译过程因报错中止，导致内核无法构建成功。

#主要错误日志
drivers/gpu/drm/display/drm_dp_dual_mode_helper.c: In function ‘is_hdmi_adaptor’:
drivers/gpu/drm/display/drm_dp_dual_mode_helper.c:164:17: error: initializer-string for array of ‘char’ is too long [-Werror=unterminated-string-initialization]
  164 |                 "DP-HDMI ADAPTOR\x04";
      |                 ^~~~~~~~~~~~~~~~~~~~~

#问题根因
GCC 15 默认开启了 `-Werror=unterminated-string-initialization` 检查选项。在 `is_hdmi_adaptor` 函数中，数组 `dp_dual_mode_hdmi_id` 的大小定义为 `DP_DUAL_MODE_HDMI_ID_LEN`，但其初始化字符串 `"DP-HDMI ADAPTOR\x04"` 包含结束符，导致字符串长度超出数组定义大小，从而触发编译错误。

#解决方案
将数组 `dp_dual_mode_hdmi_id` 的定义长度由 `DP_DUAL_MODE_HDMI_ID_LEN` 修改为 `DP_DUAL_MODE_HDMI_ID_LEN + 1`，以便为数组分配足够的空间来容纳完整的初始化字符串。

#来源
https://atomgit.com/openeuler/kernel/commit/212682ddcf583b7f1c68ab7cdd478c413396a02a